crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_at_import.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
@import "~/assets/styles/custom-media-query.css";
footer[data-v-123]{ width: 100%; }
