crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_at_import_with_nested_css.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
@import "custom.css";
footer[data-v-abc]{
  width: 100%;
  @media (--mobile) {
    padding: 1rem;
  }
}
