crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_at_media.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
.foo[data-v-123]{ color: red; }@media (max-width: 768px){.foo[data-v-123]{ color: blue; }}
