crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_at_media_custom_media.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
.a[data-v-abc]{ color: red; }@media (--mobile){.a[data-v-abc]{ font-size: 12px; }}
