crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_multiple_selectors_in_media.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
@media (--mobile){.a[data-v-xyz]{ color: red; }.b[data-v-xyz]{ color: blue; }}
