crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__apply_scoped_css_with_quoted_string.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
.foo[data-v-123]{ font-family: 'JetBrains Mono', monospace; }
