crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__compile_minified_css.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result.code.as_str()
---
.foo{color:red;background:#00f}
