crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__compile_scoped_css.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
CssCompileResult {
    code: ".foo[data-v-123] {\n  color: red;\n}\n",
    map: None,
    css_vars: [],
    errors: [],
    warnings: [],
    exports: None,
}
