crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__compile_simple_css.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
CssCompileResult {
    code: ".foo {\n  color: red;\n}\n",
    map: None,
    css_vars: [],
    errors: [],
    warnings: [],
    exports: None,
}
