crates/vize_atelier_sfc/src/css/snapshots/vize_atelier_sfc__css__tests__scoped_css_with_quoted_font_family.snap
---
source: crates/vize_atelier_sfc/src/css/tests.rs
expression: result
---
CssCompileResult {
    code: ".foo[data-v-123] {\n  font-family: JetBrains Mono, monospace;\n}\n",
    map: None,
    css_vars: [],
    errors: [],
    warnings: [],
    exports: None,
}
